# imstable

./: Architecture.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
assets/: test_dan.pgm
demo/: imstable.cpp
documentation/: CMakeLists.txt  Doxyfile
documentation/pages/: about.dox
include/: FilePGM.h  FileReader.h  ImageFrame.h  ImageProcessor.h
source/: CMakeLists.txt  FilePGM.cpp  FileReader.cpp  ImageFrame.cpp  ImageProcessor.cpp  imstable.cpp
test/: CMakeLists.txt
